--- a/default/app.conf
+++ b/default/app.conf
@@ -8,13 +8,13 @@ company = Splunk, Inc.
 is_configured = 0
 
 [package]
-id = splunk_app_gvm
+id = SA-DetectionInsight
 
 [ui]
 is_visible = 1
-label = Greenbone Vulnerability Manager App for Splunk
+label = SA-DetectionInsight for Enterprise Security
 
 [launcher]
 author = Christian Cloutier
-description = Provides insights into your security detections in Splunk Enterprise Security.
+description = A supporting Add-on for Splunk Enterprise Security providing additional insights into your security detections.
 version = 1.0.0
