--- a/default/macros.conf
+++ b/default/macros.conf
@@ -104,8 +104,24 @@ iseval = 0
 [get_detection_details(1)]
 args = nameFilter
 definition = | search title = "$nameFilter$"\
-| rename description as Description, search as Search\
-| table Description, Search
+| rename description as Description, action.escu.search_type as Type, search as Search \
+| table Description, Type, Search
+iseval = 0
+
+[get_detection_annotations(1)]
+args = nameFilter
+definition = | search title = "$nameFilter$"\
+| fields action.correlationsearch.annotations \
+| spath input=action.correlationsearch.annotations \
+| rename context{} as context, mitre_attack{} as mitre_attack, analytic_story{} as analytic_story, nist{} as nist, cis20{} as cis20, cve{} as cve, kill_chain_phases{} as kill_chain_phases, observable{}.name as observable_name, observable{}.role{} as observable_role, observable{}.type as observable_type\
+| lookup mitre_enrichment.csv mitre_id as mitre_attack OUTPUT technique as mitre_description\
+| eval mitre_attack = mvzip(mitre_attack, mitre_description, "|")\
+| lookup nist_lookup id as nist OUTPUT description as nist_description\
+| eval nist = mvzip(nist, nist_description, "|")\
+| lookup cis20_lookup id as cis20 OUTPUT description as cis20_description\
+| eval cis20 = mvzip(cis20, cis20_description, "|")\
+| eval observable = mvzip(observable_type, mvzip(observable_name, observable_role))\
+| table analytic_story, cis20, context, cve, kill_chain_phases, mitre_attack, nist, observable
 iseval = 0
 
 [get_detection_details_analytic_story(1)]
