Add scheduled search for data models

--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -8,14 +8,52 @@ dispatch.latest_time = now
 display.general.timeRangePicker.show = 0
 display.general.type = statistics
 display.page.search.tab = statistics
-display.visualizations.charting.chart = radialGauge
-display.visualizations.custom.mitre_attck_heatmap.mitre_attck_heatmap.hideNull = 0
-display.visualizations.custom.type = heatgrid_viz.heatgrid_viz
-display.visualizations.show = 0
-display.visualizations.type = custom
 enableSched = 1
 request.ui_dispatch_app = SA-DetectionInsight
 request.ui_dispatch_view = search
 schedule_window = 5
 search = | rest splunk_server=local count=0 /services/saved/searches\
 | outputlookup all_saved_searches.csv
+
+[DetectionInsight - All Datamodels - Lookup Gen]
+action.email.show_password = 1
+action.keyindicator.invert = 0
+action.makestreams.param.verbose = 0
+action.nbtstat.param.verbose = 0
+action.notable.param.verbose = 0
+action.nslookup.param.verbose = 0
+action.ping.param.verbose = 0
+action.risk.forceCsvResults = 1
+action.risk.param.verbose = 0
+action.send2uba.param.verbose = 0
+action.threat_add.param.verbose = 0
+action.webhook.enable_allowlist = 0
+alert.track = 0
+cron_schedule = */5 * * * *
+description = Generates/maintains a lookup of all the datamodels and some key statistics about them based on the /services/datamodel/model and /services/admin/summarization REST endpoints.\
+\
+This is used instead of the REST calls as it's much faster (15-25x).
+dispatch.earliest_time = -1m
+dispatch.latest_time = now
+display.general.timeRangePicker.show = 0
+display.general.type = statistics
+display.page.search.tab = statistics
+enableSched = 1
+request.ui_dispatch_app = SA-DetectionInsight
+request.ui_dispatch_view = search
+schedule_window = 5
+search = | rest /services/datamodel/model \
+| table title, acceleration \
+| rex field=acceleration "{\"enabled\":(?<accelerated>.*?)," \
+| join type=outer title \
+    [| rest /services/admin/summarization by_tstats=t splunk_server=local count=0 \
+    | eval title=replace('summary.id',(("DM_" . 'eai:acl.app') . "_"),"") \
+    | rex field=title "(?<title>.*?)(\.|$)" \
+    | fields - summary.run_stats.* eai:acl.* \
+    | rename summary.* as * \
+    | fields title, size, average_time, last_error\
+        ] \
+| table title, accelerated, size, average_time, last_error \
+| fillnull size, average_time \
+| rename title as datamodel \
+| outputlookup all_datamodels.csv]
