Add support for Unmanaged (Atomic Red Team) Annotations

--- a/default/macros.conf
+++ b/default/macros.conf
@@ -104,8 +104,9 @@ iseval = 0
 [get_detection_details(1)]
 args = nameFilter
 definition = | search title = "$nameFilter$"\
-| rename description as Description, action.escu.search_type as Type, search as Search \
-| table Description, Type, Search
+| rename description as Description, action.notable.param.severity as Severity, search as Search \
+| eval Severity = upper(substr(Severity,1,1)).substr(Severity,2)\
+| table Description, Severity, Search
 iseval = 0
 
 [get_detection_annotations(1)]
@@ -121,7 +122,7 @@ definition = | search title = "$nameFilter$"\
 | lookup cis20_lookup id as cis20 OUTPUT description as cis20_description\
 | eval cis20 = mvzip(cis20, cis20_description, "|")\
 | eval observable = mvzip(observable_type, mvzip(observable_name, observable_role))\
-| table analytic_story, cis20, context, cve, kill_chain_phases, mitre_attack, nist, observable
+| table analytic_story, cis20, context, cve, kill_chain_phases, mitre_attack, nist, observable, confidence, impact
 iseval = 0
 
 [get_detection_details_analytic_story(1)]
@@ -183,4 +184,28 @@ definition = | search title="$nameFilter$"\
 | mvexpand observable\
 | eval path = title + "/Type: " + mvindex(split(observable, ","), 0) + "/Field: " + mvindex(split(observable, ","), 1) + "/Role: " + mvindex(split(observable, ","), 2)\
 | fillnull value="No results found" path
+iseval = 0
+
+[max_search_grouping_percentage]
+definition = 15
+iseval = 0
+
+[get_other_unmanaged_annotations_counts]
+definition = count(eval(match('action.correlationsearch.annotations',"atomic_red_team"))) as "Detection is mapped to Atomic Red Team Tests"
+iseval = 0
+
+[get_atomic_red_team_details(3)]
+args = disabledFilter,domainFilter,flagFilter
+definition = | where isnotnull('action.correlationsearch.enabled') \
+| fillnull value="NONE" action.notable.param.security_domain \
+| search disabled=$disabledFilter$ $domainFilter$\
+| eval "Provided By" = if('eai:acl.app'=="DA-ESS-ContentUpdate", "ESCU", "ES") \
+| eval isEnabled = if(disabled==0, "True", "False") \
+| eval hasARTMapping = if(match('action.correlationsearch.annotations',"atomic_red_team"), "Yes", "No") \
+| search hasARTMapping = "$flagFilter$"\
+| spath input=action.correlationsearch.annotations \
+| rename atomic_red_team{} as atomic_red_team \
+| mvexpand atomic_red_team\
+| rename eai:acl.app as Application, title as Name, action.notable.param.security_domain as Domain, isEnabled as "Enabled?", hasARTMapping as "Has Atomic Mapping?", atomic_red_team as "Atomic Red Team Test Mapping" \
+| table Name, "Enabled?", "Provided By", Application, Domain, "Has Atomic Mapping?", "Atomic Red Team Test Mapping"
 iseval = 0
