--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -7,3 +7,13 @@ filename = cis20.csv
 batch_index_query = 0
 case_sensitive_match = 1
 filename = nist.csv
+
+[check_to_macro_map_lookup]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = check_to_macro_map.csv
+
+[all_datamodels_lookup]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = all_datamodels.csv
