--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -17,3 +17,8 @@ filename = check_to_macro_map.csv
 batch_index_query = 0
 case_sensitive_match = 0
 filename = all_datamodels.csv
+
+[other_mitre_detections_by_product_lookup]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = other_mitre_detections_by_product.csv
