--- a/default/macros.conf
+++ b/default/macros.conf
@@ -209,3 +209,29 @@ definition = | where isnotnull('action.correlationsearch.enabled') \
 | rename eai:acl.app as Application, title as Name, action.notable.param.security_domain as Domain, isEnabled as "Enabled?", hasARTMapping as "Has Atomic Mapping?", atomic_red_team as "Atomic Red Team Test Mapping" \
 | table Name, "Enabled?", "Provided By", Application, Domain, "Has Atomic Mapping?", "Atomic Red Team Test Mapping"
 iseval = 0
+
+[check_for_issues]
+definition = | eval issue1 = if(isnotnull(datamodel) AND accelerated=="false", "Uses a non-accelerated data model (" + datamodel + ")", null())\
+| eval issue2 = if(isnotnull(datamodel) AND size==0, "Uses an empty data model (" + datamodel + ")", null())\
+| eval issue3 = if(isnotnull(datamodel) AND last_error!="", "Uses a data model with recent acceleration errors (" + datamodel + ")", null())\
+| eval issue4 = if(isnotnull(datamodel) AND (datamodel == "Application_State" OR datamodel == "Change_Analysis"), "Uses a deprecated data model (" + datamodel + ")", null())\
+| eval issue5 = if(actions=="<none>", "Has no actions defined", null())\
+| eval issue6 = if(Domain == "<none>", "Not mapped to a Security Domain", null())\
+| eval issue7 = if(isnull(Technique) OR Technique == "", "Not mapped to MITRE ATT&CK", null())\
+| eval issue8 = if(match(actions, "risk") AND risk_score == 0, "Should generate non-zero risk", null())\
+| eval issue9 = if(risk_score > 0 AND (risk_score_dev >= 10 OR risk_score_dev <= 0.1), "Significant Risk Score deviation from average", null())\
+| eval issue10 = if(isnotnull(model_name) AND model_exists == 0, "Uses missing machine-learning model (" + model_name + ")", null())\
+| eval issue11 = if(orphan == 1, "Correlation Search Owner no longer a Splunk user", null())\
+| foreach issue* [eval issues=mvappend(issues, '<<FIELD>>')]\
+| eval issues = coalesce(issues, "None")
+iseval = 0
+
+[check_for_scheduling_issues]
+definition = | eval issue1 = if(search_type = "real-time", "Performance intensive scheduling mode", null())\
+| eval issue2 = if(disabled=0 AND is_scheduled = 0, "Enabled but not scheduled", null())\
+| eval issue3 = if(percent > `max_search_grouping_percentage`, "Part of a CRON schedule that has a high percentage of total searches (" + percent + "%)", null())\
+| eval issue4 = if(schedule_window = "0", "Consider using \"auto\" Schedule Windows", null())\
+| eval issue5 = if(allow_skew = "0", "Consider setting an allow_skew value", null())\
+| foreach issue* [eval issues=mvappend(issues, '<<FIELD>>')]\
+| eval issues = coalesce(issues, "None")
+iseval = 0
