--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -12,7 +12,7 @@ enableSched = 1
 request.ui_dispatch_app = SA-DetectionInsight
 request.ui_dispatch_view = search
 schedule_window = 5
-search = | rest splunk_server=local count=0 /services/saved/searches\
+search = | rest splunk_server=local count=0 add_orphan_field=yes /services/saved/searches\
 | outputlookup all_saved_searches.csv
 
 [DetectionInsight - All Datamodels - Lookup Gen]
