fixing Error in 'SearchParser': Mismatched ']'. message in DetectionInsight - All Datamodels - Lookup Gen

--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -43,4 +43,4 @@ search = | rest /services/datamodel/model \
 | table title, accelerated, size, average_time, last_error \
 | fillnull size, average_time \
 | rename title as datamodel \
-| outputlookup all_datamodels.csv]
+| outputlookup all_datamodels.csv
