--- a/default/macros.conf
+++ b/default/macros.conf
@@ -235,3 +235,16 @@ definition = | eval issue1 = if(search_type = "real-time", "Performance intensiv
 | foreach issue* [eval issues=mvappend(issues, '<<FIELD>>')]\
 | eval issues = coalesce(issues, "None")
 iseval = 0
+
+[get_next_steps_details(3)]
+args = disabledFilter,domainFilter,flagFilter
+definition = | where isnotnull('action.correlationsearch.enabled')\
+| fillnull value="NONE" action.notable.param.security_domain\
+| search disabled=$disabledFilter$ $domainFilter$\
+| eval "Provided By" = if('eai:acl.app'=="DA-ESS-ContentUpdate", "ESCU", "ES") \
+| eval isEnabled = if(disabled==0, "True", "False")\
+| eval hasNextSteps = if(isnotnull('action.notable.param.next_steps'), "Yes", "No")\
+| search hasNextSteps = "$flagFilter$"\
+| rename eai:acl.app as Application, title as Name, action.notable.param.security_domain as Domain, isEnabled as "Enabled?", hasNextSteps as "Has Next Steps?"\
+| table Name, "Enabled?", "Provided By", Application, Domain, "Has Next Steps?"
+iseval = 0
